fix display on mobile and pretifythe code, rock and rool i im are all set!

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,3 +35,6 @@ padding-top:8px;
 border-top: 2px solid;
 border-color:#fc3468;
 }
+.mb20 {
+  margin-bottom: 20px;
+}
